# youtube-sc

./: .gitignore  CLAUDE.md  LICENSE  README.md  pixelate_3s.sh  pixelate_v2.sh  pyproject.toml
src/audio_retriever/: main.py
src/poc/action_detection/: main.py
src/poc/audio_retriever/: main.py
src/poc/text_analyzer/: main.py
src/poc/text_retriever/: main.py
src/poc/video_speed/: main.py
src/shorts_creator/: main.py
src/shorts_creator/assets/: fonts.py
src/shorts_creator/assets/fonts/: LICENSE.txt
src/shorts_creator/domain/: __init__.py  models.py
src/shorts_creator/pipeline/: audio_retriever.py  shorts_generator.py  speech_to_text.py  storage.py  video_cutter.py  video_effecter.py
src/shorts_creator/service/: audio_retriever_service.py  speech_to_text_service.py  youtube_shorts_speech_generator_service.py
src/shorts_creator/settings/: settings.py
src/shorts_creator/video_effect/: strategies.py  video_effect.py  video_effect_service.py
src/shorts_creator/youtube/: youtube.py
src/text_analyzer/: main.py
src/text_retriever/: faster_whisper_main.py  main.py
