[project]
name = "youtube-shorts-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.0",
    "ffmpeg-python",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    "moviepy>=2.2.1",
    "openai>=1.101.0",
    "openai-whisper",
    "opencv-python>=4.12.0.88",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pysubs2>=1.8.0",
    "tqdm>=4.67.1",
]

[project.scripts]
shorts-creator = "shorts_creator.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["shorts_creator"]
package-dir = {"" = "src"}

[tool.uv]
package = true
